--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.4.1'
+
+
 }
 
 tasks.named('test') {
