--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,20 +1,25 @@
 spring:
   datasource:
-    url: ${DATA_URL:jdbc:sqlserver://mssql-190917-0.cloudclusters.net:18969;databaseName=delbank;encrypt=true;trustServerCertificate=true}
-    username: ${DATA_USER:admin}
-    password: ${DATA_PASSWORD:Amadeukkk123@}
+    url: ${DATA_URL:jdbc:sqlserver://localhost:1433;databaseName=master;encrypt=true;trustServerCertificate=true}
+    username: ${DATA_USER:sa}
+    password: ${DATA_PASSWORD:admin123!}
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
   jpa:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.SQLServerDialect
+    show-sql: true
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
 
   rabbitmq:
-    host: ${RABBIT_HOST:rabbitmq-190915-0.cloudclusters.net}
-    port: ${RABBIT_PORT:10050}
-    username: ${RABBIT_USERNAME:admin}
-    password: ${RABBIT_PASSWORD:agkCAYWt}
+    host: ${RABBIT_HOST:localhost}
+    port: ${RABBIT_PORT:5672}
+    username: ${RABBIT_USERNAME:admin123!}
+    password: ${RABBIT_PASSWORD:admin123!}
 
   logging:
     level:
